paperclip gem- added validation to model, whitelisted attribute in controller, and added file upload in view

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,10 +18,28 @@
 
   <div class="field">
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.email_field :email %>
+  </div>
+
+   <div class="field">
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
+
+   <div class="field">
+    <%= f.label :confirmation %>
+    <%= f.password_field :password_confirmation %>
+  </div>
+
+   <div class="field">
+    <%= f.label :profile_picture %>
+    <%= f.file_field :avatar %>
   </div>
 
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+
+
